# minimization

./: CMakeLists.txt  README.md  dataplot.py  package.xml  plot_phansePlaneTrajectory.m  plot_trajectories.m  plot_trajectories.m~  setup.py  time.txt  trajectory.txt  xt_pos_vel.txt  yt_pos_vel.txt
archived_output/: 2dexample_phasePlaneTrajectory.txt  Example_phasePlaneMaxVelocity.txt
include/minimization/: Path.h  Trajectory.h
msg/: Trajectorymsg.msg  Waypoint.msg  WaypointList.msg
output/: time.txt  xt_pos_vel.txt  yt_pos_vel.txt
results/: 2dexample_phasePlaneMaxVelocity.txt
src/: 2d_example.cpp  Example.cpp  Test.cpp  Trajectory.cpp  Trajectory_subscriber.cpp  mk_wps1.cpp  ryan_example.cpp
src/minimization/: py_coverage_minimization.py
